@@ -75,8 +75,9 @@
           (<a href="<?php print $topic->new_url; ?>"><?php print $topic->new_text; ?></a>)
         <?php endif; ?>
       </td>
-      <td class="created"><?php print $topic->created; ?>
-      <td class="last-reply"><?php print $topic->last_reply; ?>
+      <td class="views"><?php print $topic->views;?> </td>
+      <td class="created"><?php print $topic->created; ?> </td>
+      <td class="last-reply"><?php print $topic->last_reply; ?> </td>
     <?php endif; ?>
     </tr>
   <?php endforeach; ?>
